# open-pos

./: .cursorrules  .gitignore  .npmrc  .releaserc.json  ANALISIS-PRD-vs-ESTADO.md  AUDITORIA-USEHEAD-COMPLETA.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECCIONES-COMPLETADAS.md  CRUD-PRODUCTOS-COMPLETADO.md  DOCUMENTACION-ACTUALIZADA-v1.13.0.md  ESTADO-ACTUAL-PROYECTO.md  FIX-MIGRACIONES-COMPLETADO.md  FIX-USEHEAD-ERROR.md  GESTION-PRODUCTOS-COMPLETADA.md  INTERFAZ-POS-COMPLETADA.md  PLAN-GESTION-CLIENTES.md  PLAN-INTERFAZ-POS.md  PLAN-MEJORAS-INVENTARIO.md  PRD-POS-Sistema-Completo.md  README.md  RESUMEN-EJECUTIVO-v1.8.0.md  RESUMEN-IMPLEMENTACION-CLIENTES.md  ROADMAP-TAREAS-DESARROLLO.md  SECURITY.md  SEMANTIC-RELEASE-FIX.md  SISTEMA-DEVOLUCIONES-IMPLEMENTADO.md  drizzle.config.ts  env.example  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  test-inventory-tables.js  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/database/migrations/: 0000_loving_lady_deathstrike.sql  0001_round_squadron_supreme.sql  0002_add_cash_closing_tables.sql  0002_inventory_movements.sql  0003_add_payment_method_to_transactions.sql  0003_add_tx_fields.sql  0004_add_customers_tables.sql  0007_lucky_nova.sql  0008_add_users_table.sql  0008_strong_liz_osborn.sql  0009_add_returns_tables.sql
src-tauri/database/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0007_snapshot.json  0008_snapshot.json  (+2 more)
src-tauri/src/: lib.rs
(+258 files in other folders)
