[package]
name = "openpos"
version = "1.0.0"
description = "Super POS Miltiplatform Linux Mac Windows"
authors = [ "DavidCastillo" ]
license = "MIT"
repository = "https://github.com/davidcastilloc/open-pos"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.3.0"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-sql = { version = "2.3.0", features = [ "sqlite" ] }
tauri-plugin-mcp = { path = "../../tauri-plugin-mcp" }
serde_json = "1"

[dependencies.tauri]
version = "2.6.2"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]
